fixed spacing and font size on home page

--- a/src/app/templates/t1/t1.component.scss
+++ b/src/app/templates/t1/t1.component.scss
@@ -18,6 +18,7 @@
 }
 .nav_content{
     color: white;
+    font-size: 14px;
 }
 .hero_img{
     background-image: url("/t1/images/HomelifeKalra.png");
