--- a/src/app/templates/t2/t2.component.scss
+++ b/src/app/templates/t2/t2.component.scss
@@ -14,6 +14,7 @@
 
 .nav_content {
   color: white;
+  font-size: 14px;
 }
 
 .hero_img {
@@ -285,10 +286,6 @@ footer {
 
 .sign {
   font-size: 14px;
-}
-
-h5 {
-  color: #002FD5;
 }
 
 .sign-wid {
